Update back link to point to the correct arcade path

--- a/lobby/games/dev-bot-dodger/index.html
+++ b/lobby/games/dev-bot-dodger/index.html
@@ -19,7 +19,7 @@
   </style>
 </head>
 <body>
-  <a class="back" href="https://valorcoinsolana.github.io/valorarcade/">← Arcade</a>
+  <a class="back" href="https://valorcoinsolana.github.io/valorarcade/lobby/games/">← Arcade</a>
 
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.80.1/dist/phaser.min.js"></script>
   <script type="module" src="./src/main.js"></script>
